--- a/frontend/src/components/sidebar/Navbar.css
+++ b/frontend/src/components/sidebar/Navbar.css
@@ -70,3 +70,17 @@
   span {
     margin-left: 16px;
   }
+
+  h5{
+    
+    text-transform: uppercase;
+    text-decoration-color: #ffff;
+    color:#f5f5f5
+  }
+
+  h7{
+    
+    text-transform: uppercase;
+    text-decoration-color: #ffff;
+    color:#f5f5f5;
+  }
