--- a/frontend/src/components/sidebar/Navbar.css
+++ b/frontend/src/components/sidebar/Navbar.css
@@ -72,14 +72,14 @@
   }
 
   h5{
-    
+    text-align: right;
     text-transform: uppercase;
     text-decoration-color: #ffff;
     color:#f5f5f5
   }
 
   h7{
-    
+    text-align: right;
     text-transform: uppercase;
     text-decoration-color: #ffff;
     color:#f5f5f5;
